--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ time, mark, audio, video {
 }
 @font-face {
   font-family: "Gilroy-ExtraBold";
-  src: url(../fonts/Gilroy-ExtraBold.otf);
+  src: url
+  (../fonts/Gilroy-ExtraBold.otf);
 }
 @font-face {
   font-family: "Gilroy-Light";
