--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,87 @@
  * Photogenic by FreeHTML5.co
  * URL: https://freehtml5.co
  */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
 }
@@ -49,8 +117,7 @@ time, mark, audio, video {
 }
 @font-face {
   font-family: "Gilroy-ExtraBold";
-  src: url
-  (../fonts/Gilroy-ExtraBold.otf);
+  src: url (../fonts/Gilroy-ExtraBold.otf);
 }
 @font-face {
   font-family: "Gilroy-Light";
@@ -74,7 +141,13 @@ body {
   padding: 100px 0;
 }
 
-h2::before, h2::after, .fh5co-about-us .owl-carousel1 .owl-dots .active span, .read-more, .fh5co-news .owl-carousel2 .owl-dots .active span, .form-box h4::after, .form-box button {
+h2::before,
+h2::after,
+.fh5co-about-us .owl-carousel1 .owl-dots .active span,
+.read-more,
+.fh5co-news .owl-carousel2 .owl-dots .active span,
+.form-box h4::after,
+.form-box button {
   background-image: -moz-linear-gradient(0deg, #1270e4 0%, #58c0ff 100%);
   background-image: -webkit-linear-gradient(0deg, #1270e4 0%, #58c0ff 100%);
   background-image: -ms-linear-gradient(0deg, #1270e4 0%, #58c0ff 100%);
@@ -278,7 +351,12 @@ nav.fixed-top {
   border-top: 5px solid transparent;
 }
 .menu-links li a.active {
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.22), rgba(255, 255, 255, 0.22), transparent);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.22),
+    rgba(255, 255, 255, 0.22),
+    transparent
+  );
   border-top: 5px solid #1270e4;
 }
 @media (max-width: 1199px) {
@@ -293,7 +371,7 @@ nav.fixed-top {
 
 .navbar-collapse.show {
   background: rgba(0, 0, 0, 0.4);
-  transition: .2s;
+  transition: 0.2s;
 }
 
 .mobile-logo {
@@ -498,10 +576,30 @@ a {
   display: block;
 }
 .portfolio-tab ul li a.active {
-  background-image: linear-gradient(to bottom, rgba(18, 112, 228, 0.071), rgba(18, 112, 228, 0.071), transparent);
-  background-image: -moz-linear-gradient(to bottom, rgba(18, 112, 228, 0.071), rgba(18, 112, 228, 0.071), transparent);
-  background-image: -webkit-linear-gradient(to bottom, rgba(18, 112, 228, 0.071), rgba(18, 112, 228, 0.071), transparent);
-  background-image: -ms-linear-gradient(to bottom, rgba(18, 112, 228, 0.071), rgba(18, 112, 228, 0.071), transparent);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(18, 112, 228, 0.071),
+    rgba(18, 112, 228, 0.071),
+    transparent
+  );
+  background-image: -moz-linear-gradient(
+    to bottom,
+    rgba(18, 112, 228, 0.071),
+    rgba(18, 112, 228, 0.071),
+    transparent
+  );
+  background-image: -webkit-linear-gradient(
+    to bottom,
+    rgba(18, 112, 228, 0.071),
+    rgba(18, 112, 228, 0.071),
+    transparent
+  );
+  background-image: -ms-linear-gradient(
+    to bottom,
+    rgba(18, 112, 228, 0.071),
+    rgba(18, 112, 228, 0.071),
+    transparent
+  );
   border-top: 5px solid #1270e4;
   color: #1270e4;
 }
