--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,7 @@ ul.disc li::before {
 }
 dt {
   margin: 0;
-  color: #ff0077;
+  color:#ff7e67 ;
 }
 dd {
   margin: 0 0 0 2rem;
@@ -477,7 +477,7 @@ img.pull-left {
   display: none;
 }
 .pace .pace-progress {
-  background: #ff0077;
+  background: #ff7e67;
   position: fixed;
   z-index: 900;
   top: 0;
@@ -521,7 +521,7 @@ img.pull-left {
   border-top: 11px solid rgba(255, 255, 255, 0.1);
   border-right: 11px solid rgba(255, 255, 255, 0.1);
   border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-  border-left: 11px solid #ff0077;
+  border-left: 11px solid #ff7e67;
   -webkit-animation: load 1.1s infinite linear;
   animation: load 1.1s infinite linear;
   display: block;
