--- a/css/main.css
+++ b/css/main.css
@@ -642,8 +642,8 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-  color: #cc005f;
-  border-bottom: 1px solid #ff0077;
+  color: #ff7e67;
+  border-bottom: 1px solid #ff7e67;
 }
 label,
 legend {
@@ -987,7 +987,7 @@ input::-moz-focus-inner {
   color: #252525;
 }
 .stats-tabs li a:hover {
-  color: #ff0077;
+  color: #ff7e67;
 }
 .stats-tabs li a em {
   display: block;
@@ -1520,7 +1520,7 @@ header .logo a {
 }
 .intro-social li a:hover,
 .intro-social li a:focus {
-  color: #cc005f;
+  color: #ff7e67;
 }
 
 /**
@@ -1894,7 +1894,7 @@ header .logo a {
   border-right: 1px solid rgba(200, 200, 200, 0.1);
 }
 .popup-modal .link-box a:hover {
-  background: #cc005f;
+  background: #ff7e67;
   border: none;
 }
 @media only screen and (max-width: 600px) {
