--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ a:visited {
 a:hover,
 a:focus,
 a:active {
-  color: #ff7e67;
+  color:#5d91d6 ;
   outline: 0;
 }
 
@@ -345,7 +345,7 @@ ul.disc li::before {
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background: #ff7e67;
+  background: #5d91d6;
   position: absolute;
   left: -17px;
   top: 11px;
@@ -353,7 +353,7 @@ ul.disc li::before {
 }
 dt {
   margin: 0;
-  color: #ff7e67;
+  color: #5d91d6;
 }
 dd {
   margin: 0 0 0 2rem;
@@ -477,7 +477,7 @@ img.pull-left {
   display: none;
 }
 .pace .pace-progress {
-  background: #ff7e67;
+  background:#5d91d6;
   position: fixed;
   z-index: 900;
   top: 0;
@@ -521,7 +521,7 @@ img.pull-left {
   border-top: 11px solid rgba(255, 255, 255, 0.1);
   border-right: 11px solid rgba(255, 255, 255, 0.1);
   border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-  border-left: 11px solid #ff7e67;
+  border-left: 11px solid #5d91d6;
   -webkit-animation: load 1.1s infinite linear;
   animation: load 1.1s infinite linear;
   display: block;
@@ -642,8 +642,8 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-  color: #ff7e67;
-  border-bottom: 1px solid #ff7e67;
+  color: #5d91d6;
+  border-bottom: 1px solid #5d91d6;
 }
 label,
 legend {
@@ -759,7 +759,7 @@ button.button-primary:focus,
 input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
-  background: #ff7e67;
+  background: #5d91d6;
 }
 button.full-width,
 .button.full-width {
@@ -796,8 +796,8 @@ button.stroke.large,
 }
 button.stroke:hover,
 .button.stroke:hover {
-  border: 3px solid #ff7e67;
-  color: #ff7e67;
+  border: 3px solid #5d91d6;
+  color:#5d91d6 ;
 }
 button::-moz-focus-inner,
 input::-moz-focus-inner {
@@ -832,7 +832,7 @@ input::-moz-focus-inner {
 }
 .ss-error {
   background-color: #ffd1d2;
-  color: #e65153;
+  color:#5d91d6 ;
 }
 .ss-success {
   background-color: #c8e675;
@@ -988,7 +988,7 @@ input::-moz-focus-inner {
   color: #252525;
 }
 .stats-tabs li a:hover {
-  color: #ff7e67;
+  color: #5d91d6;
 }
 .stats-tabs li a em {
   display: block;
@@ -1138,12 +1138,12 @@ input::-moz-focus-inner {
 .section-intro h1 {
   font-family: "poppins-semibold", serif;
   font-size: 3.6rem;
-  color: #313131;
+  color: #000;
   line-height: 1.25;
   margin-bottom: 1.2rem;
 }
 .section-intro h5 {
-  color: #ff7e67;
+  color:#5d91d6 ;
   font-size: 1.6rem;
   line-height: 1.875;
   margin-bottom: 0.3rem;
@@ -1239,7 +1239,7 @@ header .logo a {
 }
 .menu-toggle span {
   display: block;
-  background-color: #ff7e67;
+  background-color: #5d91d6;
   width: 24px;
   height: 3px;
   margin-top: -1.5px;
@@ -1295,11 +1295,11 @@ header .logo a {
 
 /* is clicked */
 .menu-toggle.is-clicked span {
-  background-color: #761a1a;
+  background-color:#633b24 ;
 }
 .menu-toggle.is-clicked span::before,
 .menu-toggle.is-clicked span::after {
-  background-color: #347474;
+  background-color: #633b24;
   -moz-transition-delay: 0s, 0.2s;
   -o-transition-delay: 0s, 0.2s;
   -webkit-transition-delay: 0s, 0.2s;
@@ -1332,7 +1332,7 @@ header .logo a {
 
 /* dropdown nav */
 .main-navigation {
-  background: #ff7e67;
+  background:#1a2c3b;
   padding: 24px 30px 42px;
   margin: 0;
   width: 100%;
@@ -1355,12 +1355,12 @@ header .logo a {
   border: none;
 }
 .main-navigation li a:hover {
-  color: #3a7563;
+  color: #633b24;
   padding-left: 1rem;
 }
 .main-navigation li.current > a {
   background: none;
-  color: #ff7e67;
+  color: #5d91d6;
 }
 
 /**
@@ -1396,7 +1396,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #intro {
-  background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom;
+  background:  url(../images/background1.png) no-repeat center bottom;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -1439,7 +1439,7 @@ header .logo a {
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .intro-content h5 {
-  color: #ff7e67;
+  color: #5d91d6;
   font-family: "poppins-bold", sans-serif;
   font-size: 2.3rem;
   line-height: 1.565;
@@ -1487,7 +1487,7 @@ header .logo a {
 }
 .intro-content .button:hover,
 .intro-content .button:focus {
-  border-color: #ff7e67;
+  border-color: #5d91d6;
 }
 .intro-content .button::after {
   display: inline-block;
@@ -1521,7 +1521,7 @@ header .logo a {
 }
 .intro-social li a:hover,
 .intro-social li a:focus {
-  color: #ff7e67;
+  color: #5d91d6;
 }
 
 /**
@@ -1595,7 +1595,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #about {
-  background: #1c4444;
+  background: #1a2c3b;
   padding-top: 12rem;
   padding-bottom: 15rem;
 }
@@ -1652,7 +1652,7 @@ header .logo a {
   display: block;
   font-family: "poppins-regular", sans-serif;
   color: #bebebe;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   line-height: 1;
 }
 .about-content .skill-bars {
@@ -1893,7 +1893,7 @@ header .logo a {
   border-right: 1px solid rgba(200, 200, 200, 0.1);
 }
 .popup-modal .link-box a:hover {
-  background: #ff7e67;
+  background:#5d91d6 ;
   border: none;
 }
 @media only screen and (max-width: 600px) {
@@ -2032,7 +2032,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #contact {
-  background: #39627f;
+  background: #633b24;
   padding-top: 12rem;
   padding-bottom: 7.2rem;
 }
@@ -2040,7 +2040,7 @@ header .logo a {
   color: white;
 }
 #contact .section-intro h5 {
-  color: #ff7e67;
+  color: #5d91d6;
 }
 
 #contact .section-intro p {
@@ -2095,7 +2095,7 @@ header .logo a {
   padding: 0 2rem;
   margin: 0;
   color: #ffffff;
-  background: #ff7e67;
+  background: #5d91d6;
 }
 #contact form .form-field label::after {
   position: absolute;
@@ -2104,7 +2104,7 @@ header .logo a {
   margin-top: -6px;
   border-top: 5px solid transparent;
   border-bottom: 5px solid transparent;
-  border-right: 5px solid #ff7e67;
+  border-right: 5px solid #5d91d6;
   content: "";
 }
 
@@ -2127,7 +2127,7 @@ header .logo a {
 #contact input[type="text"]:focus,
 #contact input[type="password"]:focus,
 #contact input[type="email"]:focus {
-  border-color: #ff7e67;
+  border-color: #5d91d6;
   color: #ffffff;
 }
 #contact textarea {
@@ -2135,7 +2135,7 @@ header .logo a {
   padding: 1.8rem 2rem;
 }
 #contact textarea:focus {
-  border-color: #ff7e67;
+  border-color: #5d91d6;
   color: #ffffff;
 }
 #contact button.submitform {
@@ -2147,11 +2147,11 @@ header .logo a {
   padding: 0 3rem;
   margin-top: 4.8rem;
   width: 100%;
-  background: #ff7e67;
+  background: #5d91d6;
   color: #ffffff;
 }
 #contact button.submitform:hover {
-  background: #c59c9c;
+  background: #1a2c3b;
 }
 #message-warning,
 #message-success {
@@ -2166,7 +2166,7 @@ header .logo a {
   color: #fa0003;
 }
 #message-success {
-  color: #ff7e67;
+  color: #5d91d6;
 }
 #message-warning i,
 #message-success i {
@@ -2212,7 +2212,7 @@ header .logo a {
   color: #ffffff;
 }
 .contact-info h5 {
-  color: #ff7e67;
+  color:#5d91d6;
 }
 .contact-info p {
   color: rgba(255, 255, 255, 0.7);
@@ -2294,7 +2294,7 @@ footer a:visited {
 }
 footer a:hover,
 footer a:focus {
-  color: #ff7e67;
+  color: #5d91d6;
 }
 footer .row {
   max-width: 900px;
@@ -2316,7 +2316,7 @@ footer .footer-social li {
   padding: 0;
 }
 footer .footer-social li a {
-  color: #ff7e67;
+  color: #5d91d6;
 }
 footer .copyright span {
   display: inline-block;
@@ -2373,7 +2373,7 @@ footer .copyright span:last-child::after {
   width: 6rem;
   line-height: 6.6rem;
   text-align: center;
-  background: #ff7e67;
+  background:#5d91d6 ;
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
