--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,9 @@
  *  09. header styles
  *  10. intro
  *  11. about
- *  12. resume
- *  13. portfolio
- *  14. call-to-action section
- *  15. services
- *  16. stats
- *  17. contact
- *  18. footer
+ *  12. portfolio
+ *  13. contact
+ *  14. footer
  *
  * =================================================================== 
  */
@@ -95,7 +91,7 @@ a:visited {
 a:hover,
 a:focus,
 a:active {
-  color:#5d91d6 ;
+  color: rgb(192, 162, 103);
   outline: 0;
 }
 
@@ -345,7 +341,7 @@ ul.disc li::before {
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background: #5d91d6;
+  background: rgb(192, 162, 103);
   position: absolute;
   left: -17px;
   top: 11px;
@@ -353,7 +349,7 @@ ul.disc li::before {
 }
 dt {
   margin: 0;
-  color: #5d91d6;
+  color: rgb(192, 162, 103);
 }
 dd {
   margin: 0 0 0 2rem;
@@ -477,7 +473,7 @@ img.pull-left {
   display: none;
 }
 .pace .pace-progress {
-  background:#5d91d6;
+  background: rgb(192, 162, 103);
   position: fixed;
   z-index: 900;
   top: 0;
@@ -521,7 +517,7 @@ img.pull-left {
   border-top: 11px solid rgba(255, 255, 255, 0.1);
   border-right: 11px solid rgba(255, 255, 255, 0.1);
   border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-  border-left: 11px solid #5d91d6;
+  border-left: 11px solid rgb(192, 162, 103);
   -webkit-animation: load 1.1s infinite linear;
   animation: load 1.1s infinite linear;
   display: block;
@@ -781,8 +777,10 @@ button.large,
 button.stroke,
 .button.stroke {
   background: transparent !important;
-  border: 3px solid #111111;
-  color: #000000;
+  border: 3px solid #000;
+  border-radius: 25px;
+  transition: all 200ms ease-in-out;
+  color: #bebebe;
   justify-content: center;
   line-height: 4.8rem;
 }
@@ -796,8 +794,8 @@ button.stroke.large,
 }
 button.stroke:hover,
 .button.stroke:hover {
-  border: 3px solid #5d91d6;
-  color:#5d91d6 ;
+  border: 3px solid rgb(192, 162, 103);
+  color: #bebebe;
 }
 button::-moz-focus-inner,
 input::-moz-focus-inner {
@@ -832,7 +830,7 @@ input::-moz-focus-inner {
 }
 .ss-error {
   background-color: #ffd1d2;
-  color:#5d91d6 ;
+  color: #5d91d6;
 }
 .ss-success {
   background-color: #c8e675;
@@ -1143,7 +1141,7 @@ input::-moz-focus-inner {
   margin-bottom: 1.2rem;
 }
 .section-intro h5 {
-  color:#5d91d6 ;
+  color: rgb(192, 162, 103);
   font-size: 1.6rem;
   line-height: 1.875;
   margin-bottom: 0.3rem;
@@ -1195,11 +1193,11 @@ header .row {
   min-height: 66px;
 }
 header .top-bar {
-  display: block;
+  display: flex;
+  justify-content: space-between;
   background: #161818;
   min-width: 220px;
   min-height: 66px;
-  position: absolute;
   left: 90px;
   top: 0;
 }
@@ -1229,7 +1227,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 .menu-toggle {
-  float: left;
+  float: right;
   width: 40px;
   height: 40px;
   margin-left: 20px;
@@ -1239,7 +1237,7 @@ header .logo a {
 }
 .menu-toggle span {
   display: block;
-  background-color: #5d91d6;
+  background-color: rgb(192, 162, 103);
   width: 24px;
   height: 3px;
   margin-top: -1.5px;
@@ -1295,11 +1293,11 @@ header .logo a {
 
 /* is clicked */
 .menu-toggle.is-clicked span {
-  background-color:#633b24 ;
+  background-color: #ebebeb;
 }
 .menu-toggle.is-clicked span::before,
 .menu-toggle.is-clicked span::after {
-  background-color: #633b24;
+  background-color: #ebebeb;
   -moz-transition-delay: 0s, 0.2s;
   -o-transition-delay: 0s, 0.2s;
   -webkit-transition-delay: 0s, 0.2s;
@@ -1322,7 +1320,7 @@ header .logo a {
 /* navigation panel */
 #main-nav-wrap {
   display: block;
-  width: 100%;
+  width: 34%;
   font-family: "poppins-medium", sans-serif;
   font-size: 1.5rem;
   position: absolute;
@@ -1332,10 +1330,10 @@ header .logo a {
 
 /* dropdown nav */
 .main-navigation {
-  background:#1a2c3b;
+  background: transparent;
   padding: 24px 30px 42px;
   margin: 0;
-  width: 100%;
+  width: 40%;
   height: auto;
   clear: both;
   display: none;
@@ -1355,7 +1353,7 @@ header .logo a {
   border: none;
 }
 .main-navigation li a:hover {
-  color: #633b24;
+  color: rgb(192, 162, 103);
   padding-left: 1rem;
 }
 .main-navigation li.current > a {
@@ -1396,7 +1394,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #intro {
-  background:  url(../images/background1.png) no-repeat center bottom;
+  background: url(../images/background1.png) no-repeat center bottom;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -1431,7 +1429,7 @@ header .logo a {
   font-family: "poppins-medium", sans-serif;
   font-size: 8.4rem;
   line-height: 1.071;
-  max-width: 900px;
+  max-width: 840px;
   margin-top: 0;
   margin-bottom: 0.6rem;
   margin-left: auto;
@@ -1439,7 +1437,7 @@ header .logo a {
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .intro-content h5 {
-  color: #5d91d6;
+  color: rgb(192, 162, 103);
   font-family: "poppins-bold", sans-serif;
   font-size: 2.3rem;
   line-height: 1.565;
@@ -1487,7 +1485,7 @@ header .logo a {
 }
 .intro-content .button:hover,
 .intro-content .button:focus {
-  border-color: #5d91d6;
+  border-color: rgb(192, 162, 103);
 }
 .intro-content .button::after {
   display: inline-block;
@@ -1727,7 +1725,8 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #portfolio {
-  background: #ffffff;
+  background: rgb(26, 44, 59);
+  color: #ffffff;
   padding-top: 12rem;
   padding-bottom: 12rem;
 }
@@ -1854,6 +1853,7 @@ header .logo a {
   font-family: "poppins-regular", sans-serif;
   font-size: 1.4rem;
   line-height: 2.4rem;
+
   margin-bottom: 12px;
 }
 .popup-modal .categories {
@@ -1893,7 +1893,7 @@ header .logo a {
   border-right: 1px solid rgba(200, 200, 200, 0.1);
 }
 .popup-modal .link-box a:hover {
-  background:#5d91d6 ;
+  background: rgb(192, 162, 103);
   border: none;
 }
 @media only screen and (max-width: 600px) {
@@ -2032,7 +2032,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #contact {
-  background: #633b24;
+  background: rgb(55, 49, 36);
   padding-top: 12rem;
   padding-bottom: 7.2rem;
 }
@@ -2040,7 +2040,7 @@ header .logo a {
   color: white;
 }
 #contact .section-intro h5 {
-  color: #5d91d6;
+  color: rgb(192, 162, 103);
 }
 
 #contact .section-intro p {
@@ -2094,8 +2094,8 @@ header .logo a {
   letter-spacing: 0.1rem;
   padding: 0 2rem;
   margin: 0;
-  color: #ffffff;
-  background: #5d91d6;
+  color: #bebebe;
+  background: rgb(192, 162, 103);
 }
 #contact form .form-field label::after {
   position: absolute;
@@ -2104,7 +2104,7 @@ header .logo a {
   margin-top: -6px;
   border-top: 5px solid transparent;
   border-bottom: 5px solid transparent;
-  border-right: 5px solid #5d91d6;
+  border-right: 5px solid rgb(192, 162, 103);
   content: "";
 }
 
@@ -2127,7 +2127,7 @@ header .logo a {
 #contact input[type="text"]:focus,
 #contact input[type="password"]:focus,
 #contact input[type="email"]:focus {
-  border-color: #5d91d6;
+  border-color: rgb(192, 162, 103);
   color: #ffffff;
 }
 #contact textarea {
@@ -2135,7 +2135,7 @@ header .logo a {
   padding: 1.8rem 2rem;
 }
 #contact textarea:focus {
-  border-color: #5d91d6;
+  border-color: rgb(192, 162, 103);
   color: #ffffff;
 }
 #contact button.submitform {
@@ -2147,7 +2147,7 @@ header .logo a {
   padding: 0 3rem;
   margin-top: 4.8rem;
   width: 100%;
-  background: #5d91d6;
+  background: rgb(192, 162, 103);
   color: #ffffff;
 }
 #contact button.submitform:hover {
@@ -2209,10 +2209,10 @@ header .logo a {
 }
 .contact-info .icon i {
   font-size: 4.2rem;
-  color: #ffffff;
+  color: #bebebe;
 }
 .contact-info h5 {
-  color:#5d91d6;
+  color: rgb(192, 162, 103);
 }
 .contact-info p {
   color: rgba(255, 255, 255, 0.7);
@@ -2283,8 +2283,8 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 footer {
-  padding-top: 5rem;
-  padding-bottom: 3rem;
+  padding-top: 7rem;
+  padding-bottom: 4rem;
   font-size: 1.4rem;
   font-family: "poppins-regular", sans-serif;
 }
@@ -2294,7 +2294,7 @@ footer a:visited {
 }
 footer a:hover,
 footer a:focus {
-  color: #5d91d6;
+  color: rgb(192, 162, 103);
 }
 footer .row {
   max-width: 900px;
@@ -2316,7 +2316,7 @@ footer .footer-social li {
   padding: 0;
 }
 footer .footer-social li a {
-  color: #5d91d6;
+  color: rgb(192, 162, 103);
 }
 footer .copyright span {
   display: inline-block;
@@ -2373,7 +2373,7 @@ footer .copyright span:last-child::after {
   width: 6rem;
   line-height: 6.6rem;
   text-align: center;
-  background:#5d91d6 ;
+  background: rgb(192, 162, 103);
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
