--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ h4,
 }
 h5,
 .h05 {
-  font-size: 1.4rem;
+  font-size: 1.9rem;
   line-height: 1.714;
   text-transform: uppercase;
   letter-spacing: 0.15rem;
@@ -1142,7 +1142,7 @@ input::-moz-focus-inner {
 }
 .section-intro h5 {
   color: rgb(192, 162, 103);
-  font-size: 1.6rem;
+  font-size: 1.9rem;
   line-height: 1.875;
   margin-bottom: 0.3rem;
   letter-spacing: 0.4rem;
@@ -1166,7 +1166,7 @@ input::-moz-focus-inner {
     font-size: 2.6rem;
   }
   .section-intro h5 {
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     letter-spacing: 0.3rem;
   }
 }
@@ -1194,11 +1194,11 @@ header .row {
 }
 header .top-bar {
   display: flex;
-  justify-content: space-between;
-  background: #161818;
-  min-width: 220px;
+  position: relative;
+  justify-content:space-between;
+  background:#24465e;
+  min-width: 240px;
   min-height: 66px;
-  left: 90px;
   top: 0;
 }
 header .logo {
@@ -1322,10 +1322,10 @@ header .logo a {
   display: block;
   width: 34%;
   font-family: "poppins-medium", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   position: absolute;
   top: 100%;
-  left: 0;
+  float:left;
 }
 
 /* dropdown nav */
@@ -1341,11 +1341,12 @@ header .logo a {
 .main-navigation > li {
   display: block;
   height: auto;
+  float:left;
   text-align: left;
   padding: 0;
 }
 .main-navigation li a {
-  display: block;
+  display: flex;
   color: #ffffff;
   width: auto;
   padding: 15px 0;
@@ -1567,7 +1568,7 @@ header .logo a {
     margin-bottom: 0.6rem;
   }
   .intro-content h5 {
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     margin-bottom: 0.3rem;
     letter-spacing: 0.2rem;
   }
