--- a/css/main.css
+++ b/css/main.css
@@ -1182,212 +1182,44 @@ input::-moz-focus-inner {
  *
  * ------------------------------------------------------------------- 
  */
-header {
-  position: fixed;
-  width: 100%;
-  min-height: 66px;
-  z-index: 600;
+.container{
+    display:flex;
+    justify-content:space-evenly;
+    padding-top: 10px;
+    width: 98%;
+    margin:auto;
 }
-header .row {
-  position: relative;
-  min-height: 66px;
+nav.logo{
+    height: 150px;
+    width: 150px;
 }
-header .top-bar {
-  display: flex;
-  position: relative;
-  justify-content:space-between;
-  background:#24465e;
-  min-width: 240px;
-  min-height: 66px;
-  top: 0;
+nav.logo img{
+    width: 100%;
+    object-fit: contain;
+    margin-right: 12px;
+    margin: 10px;
 }
-header .logo {
-  float: left;
-  margin-left: 20px;
-  margin-right: 50px;
-  margin-top: 25px;
-  position: relative;
+.menu{
+    width: 100%; 
+    justify-content: space-around;
 }
-header .logo a {
-  display: block;
-  margin: 0;
-  padding: 0;
-  border: none;
-  font: 0/0 a;
-  text-shadow: none;
-  color: transparent;
-  width: 92px;
-  height: 15px;
-  background: url("/images/newlogo-1.png") no-repeat center;
-  background-size: 92px 25px;
-}
+.menu ul{
+    display: flex;
+    justify-content: space-around;
+    width: 100%  
 
-/**
- * menu toggle - (_layout.css)
- * ------------------------------------------------------------------- 
- */
-.menu-toggle {
-  float: right;
-  width: 40px;
-  height: 40px;
-  margin-left: 20px;
-  margin-top: 13px;
-  display: block;
-  position: relative;
 }
-.menu-toggle span {
-  display: block;
-  background-color: rgb(192, 162, 103);
-  width: 24px;
-  height: 3px;
-  margin-top: -1.5px;
-  font: 0/0 a;
-  text-shadow: none;
-  color: transparent;
-  position: absolute;
-  right: 8px;
-  top: 50%;
-  bottom: auto;
-  left: auto;
-  -moz-transition: background 0.2s ease-in-out;
-  -o-transition: background 0.2s ease-in-out;
-  -webkit-transition: background 0.2s ease-in-out;
-  -ms-transition: background 0.2s ease-in-out;
-  transition: background 0.2s ease-in-out;
-}
-.menu-toggle span::before,
-.menu-toggle span::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background-color: inherit;
-  position: absolute;
-  left: 0;
-  -moz-transition-duration: 0.2s, 0.2s;
-  -o-transition-duration: 0.2s, 0.2s;
-  -webkit-transition-duration: 0.2s, 0.2s;
-  -ms-transition-duration: 0.2s, 0.2s;
-  transition-duration: 0.2s, 0.2s;
-  -moz-transition-delay: 0.2s, 0s;
-  -o-transition-delay: 0.2s, 0s;
-  -webkit-transition-delay: 0.2s, 0s;
-  -ms-transition-delay: 0.2s, 0s;
-  transition-delay: 0.2s, 0s;
-}
-.menu-toggle span::before {
-  top: -8px;
-  -moz-transition-property: top, transform;
-  -o-transition-property: top, transform;
-  -webkit-transition-property: top, transform;
-  -ms-transition-property: top, transform;
-  transition-property: top, transform;
-}
-.menu-toggle span::after {
-  bottom: -8px;
-  -moz-transition-property: bottom, transform;
-  -o-transition-property: bottom, transform;
-  -webkit-transition-property: bottom, transform;
-  -ms-transition-property: bottom, transform;
-  transition-property: bottom, transform;
-}
+.menu ul li{
+    list-style: none;
+    padding: 15px;
+    margin: 10px;
 
-/* is clicked */
-.menu-toggle.is-clicked span {
-  background-color: #ebebeb;
 }
-.menu-toggle.is-clicked span::before,
-.menu-toggle.is-clicked span::after {
-  background-color: #ebebeb;
-  -moz-transition-delay: 0s, 0.2s;
-  -o-transition-delay: 0s, 0.2s;
-  -webkit-transition-delay: 0s, 0.2s;
-  -ms-transition-delay: 0s, 0.2s;
-  transition-delay: 0s, 0.2s;
+.menu ul li a{
+    color:#ffffff;
+    text-decoration: none;
+    font-size:20px;  
 }
-.menu-toggle.is-clicked span::before {
-  top: 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-.menu-toggle.is-clicked span::after {
-  bottom: 0;
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-/* navigation panel */
-#main-nav-wrap {
-  display: block;
-  width: 34%;
-  font-family: "poppins-medium", sans-serif;
-  font-size: 1.8rem;
-  position: absolute;
-  top: 100%;
-  float:left;
-}
-
-/* dropdown nav */
-.main-navigation {
-  background: transparent;
-  padding: 24px 30px 42px;
-  margin: 0;
-  width: 40%;
-  height: auto;
-  clear: both;
-  display: none;
-}
-.main-navigation > li {
-  display: block;
-  height: auto;
-  float:left;
-  text-align: left;
-  padding: 0;
-}
-.main-navigation li a {
-  display: flex;
-  color: #ffffff;
-  width: auto;
-  padding: 15px 0;
-  line-height: 16px;
-  border: none;
-}
-.main-navigation li a:hover {
-  color: rgb(192, 162, 103);
-  padding-left: 1rem;
-}
-.main-navigation li.current > a {
-  background: none;
-  color: #5d91d6;
-}
-
-/**
- * responsive:
- * header styles
- * --------------------------------------------------------------- 
- */
-@media only screen and (max-width: 1024px) {
-  header .top-bar {
-    left: 60px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  header .top-bar {
-    left: 50px;
-  }
-}
-@media only screen and (max-width: 600px) {
-  header .top-bar {
-    left: 35px;
-  }
-}
-@media only screen and (max-width: 400px) {
-  header .top-bar {
-    left: 25px;
-  }
-}
-
 /** 
  * ===================================================================
  * 10. intro - (_layout.scss) 
@@ -1413,7 +1245,7 @@ header .logo a {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #111111;
+ 
   opacity: 0.85;
 }
 
