--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ body {
  */
 a,
 a:visited {
-  color:#dad9d9;
+  color:#b9b3b3;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -93,7 +93,7 @@ a:visited {
 a:hover,
 a:focus,
 a:active {
-  color: #000000;
+  color: rgb(199, 157, 73);
   outline: 0;
 }
 
@@ -1184,47 +1184,133 @@ input::-moz-focus-inner {
  *
  * ------------------------------------------------------------------- 
  */
-.container{
-    display:flex;
-    justify-content:space-evenly;
-    padding-top: 10px;
-    background:rgb(115, 100, 69);
-    max-width: 98%;
-    margin:auto;
+.header {
+  background: rgb(5,22,44);
+  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+  position: fixed;
+  width: 99%;
+  z-index: 3;
 }
-nav.logo{
-    width: 50px;
-    padding-top: 20px;
-}
-.logo img{
-    object-fit: contain;
-    margin-right: 12px;
-    margin: 10px;
-    width: 30px;
+
+.header ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+ padding-top: 4px;
  
 }
-.menu{
-    width: 100%; 
-    justify-content: space-around;
-}
-.menu ul{
-  padding-top: 10px;
-    display: flex;
-    justify-content: space-around;
-    width: 90%;
+
+.header li a {
+  display: block;
+  padding: 20px 20px;
+  border-right: 1px solid #f4f4f4;
+  text-decoration: none;
 
 }
-.menu ul li{
-    list-style: none;
-    padding: 15px;
-    margin: 10px;
-    
-  
+
+
+.header .logo {
+  display: block;
+  float: left;
+  width:70px;
+  font-size: 2em;
+  padding: 10px 20px;
+  text-decoration: none;
 }
-.menu ul li a{
-   
-    text-decoration: none;
+
+/* menu */
+
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
 }
+
+/* menu icon */
+
+.header .menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  padding: 28px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .navicon {
+  background: #333;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 18px;
+}
+
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+  background: #333;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+  top: -5px;
+}
+
+/* menu btn */
+
+.header .menu-btn {
+  display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
+/* 48em = 768px */
+
+@media (min-width: 48em) {
+  .header li {
+    float: left;
+  }
+  .header li a {
+    padding: 20px 30px;
+  }
+  .header .menu {
+    clear: none;
+    float: right;
+    max-height: none;
+  }
+  .header .menu-icon {
+    display: none;
+  }
+}
+
 /** 
  * ===================================================================
  * 10. intro - (_layout.scss) 
