--- a/css/main.css
+++ b/css/main.css
@@ -1185,6 +1185,12 @@ input::-moz-focus-inner {
  *
  * ------------------------------------------------------------------- 
  */
+
+ .header{ 
+  min-height: 66px;
+  background: #0e1822;
+}
+
 li {
     list-style: none;
 }
@@ -1192,10 +1198,13 @@ li {
 a {
     text-decoration: none;
 }
-.header{
-  height:60px;
-  background: #0e1822;
+.nav-menu li a {
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  display: block;
 }
+
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -1207,6 +1216,7 @@ a {
     display: none;
     margin-right: 30px;
     padding-bottom: 5px;
+    cursor: pointer;
 }
 
 .bar {
@@ -1241,8 +1251,9 @@ a {
 /* 48em = 768px */
 @media only screen and (max-width: 768px) {
     .nav-menu {
-        position: fixed;
+        position: absolute;
         left: -100%;
+        display: block;
         top: 5rem;
         flex-direction: column; 
         width: 100%;
@@ -1255,6 +1266,7 @@ a {
 
     .nav-menu.active {
         left: 0;
+        display: block;
     }
 
     .nav-item {
