--- a/css/main.css
+++ b/css/main.css
@@ -1185,100 +1185,122 @@ input::-moz-focus-inner {
  *
  * ------------------------------------------------------------------- 
  */
-
+ 
  .header{
-    background: #192735;
-    max-height:66px
-}
-li {
-    list-style: none;
+  position: relative;
+  top:0;
+  width:100%;
+  height: 60px;
+  background-color: #1c2a38;
+ }
+ li{
+  list-style: none;
+
+ }
+
+ a{
+  color:#f1f1f1;
+  text-decoration: none;
+ }
+
+ .container{
+  width:1500px;
+  margin:auto;
+ }
+ .subcontainer{
+  width:85%;
+  margin:auto;
+ }
+ .navbar{
+  width:100%;
+  min-height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 15px;
+ }
+
+ .navbar img{
+  width:40px;
+  padding-bottom: 17px;
+  
+ }
+ .menu{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap:20px;
+  margin-left:70px;
+ }
+
+.hamburger{
+  display: none;
+  cursor: pointer;
+  padding-bottom: 19px;
 }
 
-a {
-    text-decoration: none;
+.bar{
+  display: block;
+  width: 25px;
+  height:3px;
+  padding-bottom: 3px;
+  margin: 5px 0;
+  transition: all 0.3s ease;
+  background-color: rgb(192, 162, 103);
 }
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 0.5rem;
-   
-}
-
-.nav-link{
-    font-size: 1.6rem;
-    font-weight: 400;
-    color: #475569;
-}
-
-.nav-link:hover{
-    color: rgb(192, 162, 103);
-}
-.hamburger {
-    display: none;
-}
-
-.bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: rgb(192, 162, 103);
-}
-.nav-menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 15px;
-}
-
-.nav-item {
-    margin-left: 5rem;
-    padding-right: 40px;
-}
-
-.logo {
-    width:40px;
-    padding-bottom: 4px;
-    position: relative;
-
+ 
+/**MEDIA QUERY**/
+@media (max-width:1500px){
+.container{
+  width:100%;
 
 }
-@media only screen and (max-width: 768px) {
-    .nav-menu {
-        position: fixed;
-        left: -100%;
-        top: 4rem;
-        flex-direction:row;
-        width:76%;
-        font-size: 14px;
-        border-radius: 10px;
-        text-align:center;  
-        transition: 0.3s;
-        box-shadow:
-            0 10px 27px rgba(0, 0, 0, 0.05);
-    }
-
-    .nav-menu.active {
-        left: 0;
-    }
-
-    .nav-item {
-        margin: 2.5rem 0;
-    }
-
-    .hamburger {
-        display: block;
-        cursor: pointer;
-        padding-top: 4px;
-    }
-    .logo{
-      padding-top: 10px;
-      width:20px
-    }
+}
+@media (max-width:768px){
+  .hamburger{
+    display:block;
+  
   }
+
+  .hamburger.active.bar :nth-child(2){
+    opacity: 0;
+  }
+
+  .hamburger.active.bar :nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active.bar :nth-child(3){
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .menu{
+    position:fixed;
+    left:-60%;
+    top:70px;
+    gap:5px;
+    flex-direction: row;
+    width:50%;
+    text-align: center;
+    transition: 0.3s;
+  
+
+  }
+  .navItem:hover{
+    color: rgb(192, 162, 103);
+  }
+  .navItem{
+    margin:16px 0;
+  }
+
+  .menu.active{
+    left:0;
+  
+  }
+}
+
+
+
     
 
    
