--- a/css/main.css
+++ b/css/main.css
@@ -1199,7 +1199,7 @@ input::-moz-focus-inner {
  }
 
  a{
-  color:#b9a8a8;
+  color:#f1f1f1;
   text-decoration: none;
   
  }
@@ -1292,9 +1292,10 @@ transform: translateY(-13px) rotate(-45deg );
   position:absolute;
   left:-100%;
   gap:0;
-  top:70px;
+  top:30px;
+  background-color: #000;
   flex-direction:row;
-  width: 100%;
+  width: 90%;
   text-align: center;
   transition: 0.3s;
  }
