--- a/css/main.css
+++ b/css/main.css
@@ -1180,6 +1180,9 @@ input::-moz-focus-inner {
 }
 
 /** 
+
+ 
+/** 
  * ===================================================================
  * 09. header styles - (_layout.scss)
  *
@@ -1187,7 +1190,7 @@ input::-moz-focus-inner {
  */
  
  .header{
-  position: relative;
+  
   top:0;
   width:100%;
   height: 60px;
@@ -1246,7 +1249,7 @@ input::-moz-focus-inner {
   width: 25px;
   height:3px;
   padding-bottom:  3px;
-  margin: 5px auto;
+  margin: 5px 0;
   transition: all 0.3s ease;
   background-color: rgb(192, 162, 103);
 }
@@ -1263,40 +1266,45 @@ input::-moz-focus-inner {
   @media (max-width:1500px){
 
 .container{
-  width:100%
+  width:100%;
 }
 }
-  
-    @media (max-width:768px){
- .hamburger{
+
+@media (max-width:768px){
+
+.hamburger{
   display:block;
-  
- }
- .hamburger.active.bar:nth-child(2){
-transform: translateX(-50px);
-background: rgb(192, 162, 103);
+  position: relative;
+}
+.hamburger.active.bar:nth-child(2){
+opacity: 0;
+
  }
 .hamburger.active.bar:nth-child(1){
-transform: translateY(13px) rotate(45deg );
+transform: translateY(8px) rotate(45deg );
  }
 .hamburger.active.bar:nth-child(3){
-transform: translateY(-13px) rotate(-45deg );
+transform: translateY(-8px) rotate(-45deg );
  }
- .hamburger:active{
-  transition: 1s;
+ .nav-menu{
+  position: absolute;
+  left:-100%;
  }
+
+  
 
 
 
  .nav-menu{
-  position:absolute;
+  position:fixed;
   left:-100%;
   gap:0;
-  top:30px;
+  top:80px;
   flex-direction:row;
   width: 90%;
   text-align: center;
   transition: 0.3s;
+  z-index: 3;
  }
 
 
@@ -1310,14 +1318,7 @@ transform: translateY(-13px) rotate(-45deg );
   .nav-menu.active{
     left:0;
   }
-}
-
-
-
-
-   
-
-
+    }
 /** 
  * ===================================================================
  * 10. intro - (_layout.scss) 
@@ -1331,7 +1332,6 @@ transform: translateY(-13px) rotate(-45deg );
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
-  height: 80%;
   min-height: 720px;
   display: table;
   position: relative;
