--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,7 @@ p.lead {
   font-family: "lora-regular", serif;
   font-size: 2rem;
   line-height: 1.8;
+  text-align: justify;
   color: #888888;
 }
 @media only screen and (max-width: 768px) {
